--- a/STUŽKOVÁ/style-stuzkove.css
+++ b/STUŽKOVÁ/style-stuzkove.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #7E681FFF;
+  color: #ffffff;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -233,10 +233,10 @@ h1 {
 }
 .suit-info h2 {   /*nádpisi šiat*/
   margin-top: 0;
-  color: #1a4718;
+  color: #ffffff;
 }
 .suit-info p {    /*popis šiat*/
-  color: #48723E;
+  color: #ffffff;
 }
 .suit-info .price {    /*cena šiat*/
   color: #000000;
