--- a/STUŽKOVÁ/style-stuzkove.css
+++ b/STUŽKOVÁ/style-stuzkove.css
@@ -12,7 +12,7 @@
    ========================================================================== */
 
 html {
-  color: #ffffff;
+  color: #0e0e0e;
   font-size: 1em;
   line-height: 1.4;
 }
@@ -78,7 +78,7 @@ h1 {
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #ffffff; /* tmavozelené pozadie */
+  background-color: #abd0ab; /* tmavozelené pozadie */
   color:#000000 ; /* biela farba písma */
 }
 
@@ -109,7 +109,7 @@ body {
 .form-group textarea {
   width: calc(100% - 10px);
   padding: 8px;
-  border: 1px solid #ffffff;
+  border: 1px solid #0e0e0e;
   border-radius: 4px;
 }
 
@@ -206,10 +206,10 @@ body {
 .container-galery {
   width: 80%;
   margin: 20px auto;
-  background-color: #EAE69E;
+  background-color: #abd0ab;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 50px #BFDB81;
+  box-shadow: 0 0 50px #abd0ab;
 }
 h1 {
   text-align: center;
@@ -233,10 +233,10 @@ h1 {
 }
 .suit-info h2 {   /*nádpisi šiat*/
   margin-top: 0;
-  color: #ffffff;
+  color: #0e0e0e;
 }
 .suit-info p {    /*popis šiat*/
-  color: #ffffff;
+  color: #0e0e0e;
 }
 .suit-info .price {    /*cena šiat*/
   color: #000000;
@@ -245,7 +245,7 @@ h1 {
 
  {
       text-align: center;
-      color: #7e681f;
+      color: #abd0ab;
 }
 
     .gallery {
