--- a/FIREMNÉ VEČIERKY/style.css
+++ b/FIREMNÉ VEČIERKY/style.css
@@ -1917,3 +1917,18 @@ td:last-child {
 .error {
   color: #ff003b;
 }
+
+.header-hlavná {
+
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #151515;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  box-sizing: border-box;
+  z-index: 100;
+}
